@@ -1,3 +1,10 @@
+2004-10-31 Bart Hakvoort  <gparted@users.sf.net>
+
+	* include/Partition.h,
+	  src/Partition.cc: removed color_string
+	* src/VBox_VisualDisk.cc,
+	  src/TreeView_Detail.cc: replaced color_string with Get_Color from Utils.h
+
 2004-10-30 Bart Hakvoort  <gparted@users.sf.net>
 
 	* configure.in: added checks for libuuid and libdl. Also refined libparted check a bit.
